// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThreeIdHandler applies anchor record correctly 1`] = `
Object {
  "anchorProof": Object {
    "codec": "dag-pb",
    "hash": Object {
      "data": Array [
        18,
        32,
        222,
        189,
        122,
        219,
        60,
        229,
        101,
        68,
        210,
        42,
        111,
        107,
        147,
        57,
        123,
        201,
        128,
        168,
        6,
        124,
        44,
        193,
        52,
        240,
        247,
        128,
        27,
        99,
        49,
        9,
        43,
        149,
      ],
      "type": "Buffer",
    },
    "version": 1,
  },
  "anchorStatus": 3,
  "content": Object {
    "other": "data",
    "publicKeys": Object {
      "test": "0xabc",
    },
  },
  "doctype": "3id",
  "log": Array [
    Object {
      "codec": "dag-pb",
      "hash": Object {
        "data": Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          111,
          105,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "type": "Buffer",
      },
      "version": 1,
    },
    Object {
      "codec": "dag-pb",
      "hash": Object {
        "data": Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          115,
          137,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "type": "Buffer",
      },
      "version": 1,
    },
    Object {
      "codec": "dag-pb",
      "hash": Object {
        "data": Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          119,
          169,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "type": "Buffer",
      },
      "version": 1,
    },
  ],
  "nextOwners": undefined,
  "owners": Array [
    "0x123",
  ],
  "signature": 2,
}
`;

exports[`ThreeIdHandler applies genesis record correctly 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {
    "publicKeys": Object {
      "test": "0xabc",
    },
  },
  "doctype": "3id",
  "log": Array [
    Object {
      "codec": "dag-pb",
      "hash": Object {
        "data": Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          111,
          105,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "type": "Buffer",
      },
      "version": 1,
    },
  ],
  "nextContent": null,
  "owners": Array [
    "0x123",
  ],
  "signature": 0,
}
`;

exports[`ThreeIdHandler applies signed record correctly 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {
    "other": "data",
    "publicKeys": Object {
      "test": "0xabc",
    },
  },
  "doctype": "3id",
  "log": Array [
    Object {
      "codec": "dag-pb",
      "hash": Object {
        "data": Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          111,
          105,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "type": "Buffer",
      },
      "version": 1,
    },
    Object {
      "codec": "dag-pb",
      "hash": Object {
        "data": Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          115,
          137,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "type": "Buffer",
      },
      "version": 1,
    },
  ],
  "nextContent": Object {
    "other": "data",
    "publicKeys": Object {
      "test": "0xabc",
    },
  },
  "nextOwners": undefined,
  "owners": Array [
    "0x123",
  ],
  "signature": 2,
}
`;
